--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Static Page</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <h1>Future Home of the Rexburg Wildcats</h1>
+    <p>Under construction, check back soon for details.</p>
 </body>
 </html>
