Adding styling and inital email contact

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Static Page</title>
+    <title>Wildcats</title>
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Future Home of the Rexburg Wildcats</h1>
-    <p>Under construction, check back soon for details.</p>
+    <div class="container">
+        <h1>Future Home of the Rexburg Wildcats</h1>
+        <p>Under construction, check back soon for details.</p>
+        <a href="mailto:rexburgwildcats.com">Contact Us</a>
+        <br>
+    </div>
 </body>
 </html>
