updated email text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="container">
         <h1>Future Home of the Rexburg Wildcats</h1>
         <p>Under construction, check back soon for details.</p>
-        <a href="mailto:rexburgwildcats.com">Contact Us</a>
+        <p>Contact us with any questions.</p>
+        <a href="mailto:rexburgwildcats.com">Email Us</a>
         <br>
     </div>
 </body>
