--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <h1>Future Home of the Rexburg Wildcats</h1>
         <p>Under construction, check back soon for details.</p>
         <p>Contact us with any questions.</p>
-        <a href="mailto:rexburgwildcats.com">Email Us</a>
+        <span class="contact-info">
+            Email:
+            <a href="mailto:rexburgwildcats.com">RexburgWildcats@gmail.com</a>
+        </span>
+        
         <br>
     </div>
 </body>
