Fixed contact info to be center

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <h1>Future Home of the Rexburg Wildcats</h1>
         <p>Under construction, check back soon for details.</p>
         <p>Contact us with any questions.</p>
-        <span class="contact-info">
             Email:
             <a href="mailto:rexburgwildcats.com">RexburgWildcats@gmail.com</a>
-        </span>
-        
+            <p>Call or Text: 208-538-9925</p>
         <br>
     </div>
 </body>
