removal of unessarry "the"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Future Home of the Rexburg Wildcats Hockey</h1>
+        <h1>Future Home of Rexburg Wildcats Hockey</h1>
         <p>Under construction, check back soon for details.</p>
         <p>Contact us with any questions.</p>
             Email:
